Fix the uptime format
https://bugzilla.redhat.com/show_bug.cgi?id=767100

The uptime output was too long when the value exceeded 1 day. Moreover, it was
not using i18n which made it untranslatable.

Now it uses standard I18n values for displaying time difference, which
incidentally makes the output long enough to fit into the pretty view
deployment boxes.

The boxes are a bit wider, too. That will hopefully make the translators' jobs
a bit easier.

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -2176,7 +2176,7 @@ $font-family-primary: Helvetica, Arial, "Lucida Grande", sans-serif;
 /* todo: move this elsewhere */
 
 $deployment-large-height: 154px;
-$deployment-large-width: 154px;
+$deployment-large-width: 166px;
 $deployment-large-padding: 8px;
 
 ul.deployment-array.large{
@@ -2240,7 +2240,7 @@ ul.deployment-array.large{
   }
 
   li.deployment + li.deployment{
-    margin-left: 38px;
+    margin-left: 23px;
   }
 
   li.deployment.pending, li.deployment.alert, li.deployment.failure{
